5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1590_842.log
== TEST (2019-03-26 12:13:12) 
-- CODE:
valor=int(input("Valor: 3141"))
print3141%10


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print3141%10
NameError: name 'print3141' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:13:40) 
-- CODE:
valor=int(input("Valor: 3141"))
print"Valor"


-- ERROR:
File "XXXX", line 2
    print"Valor"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:13:49) 
-- CODE:
valor=int(input("Valor: 3141"))
print"3141"


-- ERROR:
File "XXXX", line 2
    print"3141"
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:13:56) 
-- CODE:
valor=int(input("Valor: 3141"))
print3141


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print3141
NameError: name 'print3141' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:14:23) 
-- CODE:
valor=int(input("Valor: 3141"))
print3141%10
print3141//10

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print3141%10
NameError: name 'print3141' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:14:45) 
-- CODE:
valor=int(input("Valor: 9999"))
print3141%10
print3141//10

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print3141%10
NameError: name 'print3141' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:15:10) 
-- CODE:
valor=int(input("Valor: 9999"))
print3141%10
print(valor(3141//10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print3141%10
NameError: name 'print3141' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:15:28) 
-- CODE:
valor=int(input("Valor: 9999"))
print3141%10=1
print(valor(3141//10))

-- ERROR:
File "XXXX", line 2
    print3141%10=1
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:15:45) 
-- CODE:
valor=int(input("Valor: 9999"))
print3141%10
print(valor(3141//10=4))

-- ERROR:
File "XXXX", line 3
    print(valor(3141//10=4))
               ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:27:38) 
-- CODE:
a=(input("Digite 4 digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=a//1000
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:27:43) 
-- CODE:
a=(input("Digite 4 digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)
-- EXECUTION TIME:
0.210675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/842/main.py", line 2, in <module>
    b=a//1000
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:27:46) 
-- CODE:
a=(input("Digite 4 digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=a//1000
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:28:29) 
-- CODE:
a=int(input("Digite 4 digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:28:44) 
-- CODE:
a=int(input("Digite 4 digitos: "))
b=a//1000
c=a%1000
d=c//100
e=c%100
f=e//10
g=e%10
print(b+d+f+g)
-- EXECUTION TIME:
0.170034
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
